added google maps and ability to change the radius of set geofence

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_nearby">NearbyActivity</string>
     <string name="title_activity_location">LocationActivity</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_maps2">Map</string>
 </resources>
