--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Attend</string>
     <string name="title_activity_nearby">NearbyActivity</string>
     <string name="title_activity_location">LocationActivity</string>
+    <string name="nav_classes">Classes</string>
+    <string name="nav_map">Map</string>
+    <string name="nav_roll">Roll</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
