--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_location">LocationActivity</string>
     <string name="title_activity_map">MapActivity</string>
     <string name="title_activity_maps2">Map</string>
+    <string name="title_activity_student_geofence">Map</string>
 </resources>
